# Catch23

./: CMakeLists.txt  LICENSE  README.md  design_questions.md  mvp-todo.md
catch23/: CMakeLists.txt
catch23/include/catch23/: adjusted_result.h  catch23_catch2.h  catch23_colour.cpp  catch23_colour.h  catch23_console_reporter.cpp  catch23_console_reporter.h  catch23_generator_node.h  catch23_generators.cpp  catch23_generators.h  catch23_internal_execution_nodes.h  catch23_internal_test.h  catch23_local_test.cpp  catch23_local_test.h  catch23_main_mod.h  catch23_mod.h  catch23_random.h  catch23_reporter.h  catch23_runner.h  catch23_sections.h  catch23_test.h  catch23_test_info.h  catch23_test_result_handler.h  catch2_compat.h  clara.h  colour.h  command_line.h  config.h  console_reporter.h  generator_node.h  generators.h  internal_execution_nodes.h  internal_test.h  local_test.h  macros.h  main.h  meta_test.h  mocks.h  print.cpp  print.h  random.h  (+7 more)
catch23/modules/: catch23.cppm  catch23.main.cppm
catch23/single_include/: catch23.h
catch23/src/: adjusted_result.cpp  catch2.cpp  catch23_catch2.cpp  catch23_colour.cpp  catch23_console_reporter.cpp  catch23_generator_node.cpp  catch23_generators.cpp  catch23_internal_execution_nodes.cpp  catch23_internal_execution_nodes.h  catch23_internal_test.cpp  catch23_reporter.cpp  catch23_runner.cpp  catch23_sections.cpp  catch23_test.cpp  catch23_test_info.cpp  catch23_test_result_handler.cpp  catch2_compat.cpp  clara.cpp  colour.cpp  command_line.cpp  console_reporter.cpp  generator_node.cpp  generators.cpp  internal_execution_nodes.cpp  internal_test.cpp  local_test.cpp  main.cpp  meta_test.cpp  mocks.cpp  print.cpp  reporter.cpp  runner.cpp  sections.cpp  test.cpp  test_info.cpp  test_registry.cpp  test_result_handler.cpp
catchkit/: CMakeLists.txt
catchkit/include/catchkit/: assert_result_handler.h  assertion_context.h  captured_variable.h  catchkit_assert_result_handler.h  catchkit_assertion_context.h  catchkit_checker.h  catchkit_decomposer.h  catchkit_exceptions.h  catchkit_expr_ref.h  catchkit_expression_info.h  catchkit_internal_warnings.h  catchkit_matchers.h  catchkit_operator_to_string.h  catchkit_platform.h  catchkit_result_handler.h  catchkit_stringify.h  catchkit_unique_name.h  checker.h  decomposer.h  exceptions.h  expr_ref.h  expression_info.h  expression_type.h  internal_compilers.h  internal_macro_utils.h  internal_matchers.h  internal_platform.h  internal_warnings.h  macros.h  matchers.h  operator_to_string.h  operators.h  reflection.h  report_on.h  result_handler.h  result_type.h  stringify.h  variable_capture.cpp  variable_capture.h  variable_capture_ref.h
catchkit/modules/: catchkit.cppm
catchkit/single_include/: catchkit.h
catchkit/src/: assert_result_handler.cpp  assertion_context.cpp  captured_variable.cpp  catchkit_assert_result_handler.cpp  catchkit_assertion_context.cpp  catchkit_checker.cpp  catchkit_decomposer.cpp  catchkit_exceptions.cpp  catchkit_expr_ref.cpp  catchkit_expression_info.cpp  catchkit_matchers.cpp  catchkit_operator_to_string.cpp  catchkit_operators.cpp  catchkit_result_handler.cpp  catchkit_result_type.cpp  catchkit_stringify.cpp  checker.cpp  decomposer.cpp  exceptions.cpp  expr_ref.cpp  expression_info.cpp  internal_compilers.cpp  internal_matchers.cpp  internal_platform.cpp  matchers.cpp  operator_to_string.cpp  operators.cpp  reflection.cpp  result_handler.cpp  result_type.cpp  stringify.cpp  variable_capture.cpp  variable_capture_ref.cpp
scripts/packer/: pack.py
src/: main.cpp
src/IntrospectionTests/: Clara3.tests.cpp  ExecutionNodes.tests.cpp  Meta.tests.cpp  Reflection.tests.cpp
src/UsageTests/: Condition.tests.cpp  Generator.tests.cpp  Matchers.tests.cpp  Mock.tests.cpp  PropertyBased.tests.cpp  Section.tests.cpp  Stringify.tests.cpp  ToStringPair.tests.cpp  ToStringVector.tests.cpp  Tricky.tests.cpp
